--- a/less/home-page.less
+++ b/less/home-page.less
@@ -71,7 +71,10 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
-
+    @media @mobile{
+      .centered();
+      width:100%;
+      }
     img {
       border-radius: 10px;
     }
@@ -82,10 +85,16 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @mobile{
+      .centered();
+      }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @mobile{
+        width: 100%;
+        }
     }
   }
 }// home
